Update wedding title and Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>[이름A & 이름B] 모바일 청첩장</title>
+  <title>Wedding of Daniel & Diana</title>
   <!-- Open Graph / KakaoTalk 미리보기 -->
   <meta property="og:title" content="[이름A & 이름B] 결혼식에 초대합니다" />
   <meta property="og:description" content="[YYYY.MM.DD (요일) HH:MM] | [예식장 이름/홀명]" />
-  <meta property="og:image" content="https://example.com/cover.jpg" />
-  <meta property="og:url" content="https://example.com" />
+  <meta property="og:image" content="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" />
+  <meta property="og:url" content="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" />
   <meta property="og:type" content="website" />
 
   <meta name="format-detection" content="telephone=no" />
