--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Open Graph / KakaoTalk 미리보기 -->
   <meta property="og:title" content="[이름A & 이름B] 결혼식에 초대합니다" />
   <meta property="og:description" content="[YYYY.MM.DD (요일) HH:MM] | [예식장 이름/홀명]" />
-  <meta property="og:image" content="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" />
+  <meta property="og:image" content="wedding picture" />
   <meta property="og:url" content="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" />
   <meta property="og:type" content="website" />
 
