--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   <div class="wrap">
     <!-- HERO -->
     <header class="hero">
-      <img src="https://images.unsplash.com/photo-1519741497674-611481863552?q=80&w=1600&auto=format&fit=crop" alt="커버 이미지" />
-      <div class="badge">[YYYY.MM.DD] [HH:MM] • [예식장]</div>
+      <img src="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" alt="커버 이미지" />
+      <div class="badge">[June.06,2026] [HH:MM] • [예식장]</div>
     </header>
 
     <!-- 인사말 / 커플 소개 -->
