--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- Open Graph / KakaoTalk 미리보기 -->
   <meta property="og:title" content="[이름A & 이름B] 결혼식에 초대합니다" />
   <meta property="og:description" content="[YYYY.MM.DD (요일) HH:MM] | [예식장 이름/홀명]" />
-  <meta property="og:image" content="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" />
-  <meta property="og:url" content="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" />
+  <meta property="og:image" content="https://drive.google.com/file/d/19xKtU9cdvId2OS4oZUQkT1hQGDwqgCiI/view?usp=drive_link" />
+  <meta property="og:url" content="https://drive.google.com/file/d/19xKtU9cdvId2OS4oZUQkT1hQGDwqgCiI/view?usp=drive_link" />
   <meta property="og:type" content="website" />
 
   <meta name="format-detection" content="telephone=no" />
@@ -55,8 +55,8 @@
   <div class="wrap">
     <!-- HERO -->
     <header class="hero">
-      <img src="https://www.canva.com/design/DAG4JyKJMIA/3901baH5HZQbCANUotl8TA/view?utm_content=DAG4JyKJMIA&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h194987c094" alt="커버 이미지" />
-      <div class="badge">[June.06,2026] [HH:MM] • [예식장]</div>
+      <img src="https://drive.google.com/file/d/19xKtU9cdvId2OS4oZUQkT1hQGDwqgCiI/view?usp=drive_link" alt="커버 이미지" />
+      <div class="badge">[06.06,2026] [HH:MM] • [예식장]</div>
     </header>
 
     <!-- 인사말 / 커플 소개 -->
