--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="wrap">
     <!-- HERO -->
     <header class="hero">
-      <img src="https://drive.google.com/file/d/19xKtU9cdvId2OS4oZUQkT1hQGDwqgCiI/view?usp=drive_link" alt="커버 이미지" />
+      <img src="공개링크_청첩장메인사진.png" alt="커버 이미지" />
       <div class="badge">[06.06,2026] [HH:MM] • [예식장]</div>
     </header>
 
