Update Open Graph image meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Open Graph / KakaoTalk 미리보기 -->
   <meta property="og:title" content="[이름A & 이름B] 결혼식에 초대합니다" />
   <meta property="og:description" content="[YYYY.MM.DD (요일) HH:MM] | [예식장 이름/홀명]" />
-  <meta property="og:image" content="https://drive.google.com/file/d/19xKtU9cdvId2OS4oZUQkT1hQGDwqgCiI/view?usp=drive_link" />
+  <meta property="og:image" content="공개링크_청첩장메인사진.png" />
   <meta property="og:url" content="https://drive.google.com/file/d/19xKtU9cdvId2OS4oZUQkT1hQGDwqgCiI/view?usp=drive_link" />
   <meta property="og:type" content="website" />
 
